--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 						<div class="meta">Python</div>
 						<div class="action"><a href="https://github.com/LinPsPs/Yelp-Crawler">View on Github</a></div>
 					</div><!--//content-->    
-					<a class="link-mask" href="#"></a>              
+					<a class="link-mask" href="https://github.com/LinPsPs/Yelp-Crawler"></a>              
 				</div><!--//item-inner-->
 			</div><!--//item-->
 
@@ -207,7 +207,7 @@
 						<div class="meta">Java</div>
 						<div class="action"><a href="https://github.com/LinPsPs/StockTradingSystem">View on Github</a></div>
 					</div><!--//content-->    
-					<a class="link-mask" href="#"></a>              
+					<a class="link-mask" href="https://github.com/LinPsPs/StockTradingSystem"></a>              
 				</div><!--//item-inner-->
 			</div><!--//item-->
 			
