--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<div class="top-bar container-fluid">
 		<div class="actions">
 			<a class="btn hidden-xs" href="mailto:someone@example.com"><i class="fa fa-paper-plane" aria-hidden="true"></i> Send me an Email</a>
-			<a class="btn" href="https://github.com/LinPsPs/LinPsPs.github.io/blob/master/Haolin_Yu_Resume.pdf"><i class="fa fa-download" aria-hidden="true"></i> Download My Resume</a>
+			<a class="btn" href="https://raw.githubusercontent.com/LinPsPs/LinPsPs.github.io/5aafba1c692ec9b2dcc1a1dda32761124f118baa/Haolin_Yu_Resume.pdf?token=AIEYJCVOYGCQBRCXO6XF6P253VDGE"><i class="fa fa-download" aria-hidden="true"></i> Download My Resume</a>
 		</div><!--//actions-->
 		<ul class="social list-inline">
 			<li><a href="https://www.linkedin.com/in/haolin-yu-ab89a7b4/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
@@ -229,8 +229,8 @@
 				</ul>
 				<p>Drop me a line at <a href="mailto:someone@example.com">haolin.yu@outlook.com</a> or call me at <a href="tel:631-994-5972">631-994-5972</a></p>
 				<ul class="social list-inline">
-					<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-					<li><a href="#"><i class="fa fa-github-alt" aria-hidden="true"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/haolin-yu-ab89a7b4/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+					<li><a href="https://github.com/LinPsPs"><i class="fa fa-github-alt" aria-hidden="true"></i></a></li>
 				</ul><!--//social-->
 			</div><!--//diaplog-->
 		</div><!--//intro-->
